--- a/bos_mangement/bos_mangement_web/src/main/webapp/pages/base/standard.html
+++ b/bos_mangement/bos_mangement_web/src/main/webapp/pages/base/standard.html
@@ -4,13 +4,17 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>取派标准</title>
-		<!-- 导入jquery核心类库 -->
-		<script type="text/javascript" src="../../js/jquery-1.8.3.js"></script>
+
 		<!-- 导入easyui类库 -->
 		<link rel="stylesheet" type="text/css" href="../../js/easyui/themes/default/easyui.css">
 		<link rel="stylesheet" type="text/css" href="../../js/easyui/themes/icon.css">
 		<link rel="stylesheet" type="text/css" href="../../js/easyui/ext/portal.css">
 		<link rel="stylesheet" type="text/css" href="../../css/default.css">
+
+
+        <!-- 导入jquery核心类库 -->
+        <script type="text/javascript" src="../../js/jquery-1.8.3.js"></script>
+
 		<script type="text/javascript" src="../../js/easyui/jquery.easyui.min.js"></script>
 		<script type="text/javascript" src="../../js/easyui/ext/jquery.portal.js"></script>
 		<script type="text/javascript" src="../../js/easyui/ext/jquery.cookie.js"></script>
@@ -36,8 +40,6 @@
 				});
 			});
 
-			$.get
-			
 			//工具栏
 			var toolbar = [ {
 				id : 'button-add',
@@ -52,15 +54,38 @@
 				iconCls : 'icon-edit',
 				handler : function(){
 
-					alert('修改');
+				    //获取用户选择的行数,如果不为1,弹出警告,否则弹出修改框
+					var rows = $("#grid").datagrid("getSelections");
+					if (rows.length == 1){
+					    //弹出修改框
+					    $("#standardWindow").window("open");
+					    //回填数据
+					    $("#standardFrom").form("load",rows[0]);
+					} else{
+					    $.messager.alert('消息','请选择一行数据进行修改','info');
+					}
 				}
 			},{
 				id : 'button-delete',
 				text : '作废',
 				iconCls : 'icon-cancel',
-				handler : function(){
-					alert('作废');
-				}
+				handler : function() {
+
+                    var rows = $("#grid").datagrid("getSelections");
+                    if (rows.length == 0) {
+                        $.messager.alert("提示", "请选择至少一条数据进行操作!", "info");
+                    } else {
+                        $.messager.confirm("提示", "您确定要作废这些标准吗?", function (r) {
+                            if (r) {
+                                var array = new Array();
+                                for (var i = 0; i < rows.length; i++) {
+                                    array.push(rows[i].id);
+                                }
+                                window.location.href = "../../standardAction_batchDel.action?ids="+array;
+                            }
+                        });
+                    }
+                }
 			},{
 				id : 'button-restore',
 				text : '还原',
