--- a/bos_mangement/bos_mangement_web/src/main/webapp/pages/base/area.html
+++ b/bos_mangement/bos_mangement_web/src/main/webapp/pages/base/area.html
@@ -12,15 +12,25 @@
 		<link rel="stylesheet" type="text/css" href="../../css/default.css">
 		<script type="text/javascript" src="../../js/easyui/jquery.easyui.min.js"></script>
 		<script type="text/javascript" src="../../js/easyui/ext/jquery.portal.js"></script>
-		<script type="text/javascript" src="../../js/easyui/ext/jquery.cookie.js"></script>
-		<script src="../../js/easyui/locale/easyui-lang-zh_CN.js" type="text/javascript"></script>
-		<script type="text/javascript">
+        <script type="text/javascript" src="../../js/easyui/ext/jquery.cookie.js"></script>
+        <script src="../../js/easyui/locale/easyui-lang-zh_CN.js" type="text/javascript"></script>
+        <script type="text/javascript" src="../../js/jquery.ocupload-1.1.2.js"></script>
+        <script type="text/javascript">
 			function doAdd(){
 				$('#addWindow').window("open");
 			}
 			
 			function doView(){
-				alert("修改...");
+
+                var rows = $("#grid").datagrid("getSelections");
+                if (rows.length == 1){
+                    //弹出修改框
+                    $('#addWindow').window("open");
+                    //回填数据
+                    $("#areaForm").form("load",rows[0]);
+                } else{
+                    $.messager.alert('消息','请选择一行数据进行修改','info');
+                }
 			}
 			
 			function doDelete(){
@@ -46,7 +56,7 @@
 			}, {
 				id : 'button-import',
 				text : '导入',
-				iconCls : 'icon-redo'
+				iconCls : 'icon-redo',
 			}];
 			// 定义列
 			var columns = [ [ {
@@ -98,11 +108,15 @@
 					pageList: [30,50,100],
 					pagination : true,
 					toolbar : toolbar,
-					url : "../../data/area.json",
+					url : "../../areaAction_pageQuery.action",
 					idField : 'id',
 					columns : columns,
 					onDblClickRow : doDblClickRow
 				});
+                //给导入按钮绑定事件
+                $("#button-import").upload({
+                    action: '../../areaAction_importXLS.action'
+                });
 				
 				// 添加、修改区域窗口
 				$('#addWindow').window({
@@ -120,6 +134,14 @@
 			function doDblClickRow(){
 				alert("双击表格数据...");
 			}
+
+            function submitDate() {
+                var result = $("#areaForm").form("validate");
+                if(result){
+                    $("#areaForm").submit();
+                }
+            }
+
 		</script>
 	</head>
 
@@ -130,15 +152,16 @@
 		<div class="easyui-window" title="区域添加修改" id="addWindow" collapsible="false" minimizable="false" maximizable="false" style="top:20px;left:200px">
 			<div region="north" style="height:31px;overflow:hidden;" split="false" border="false">
 				<div class="datagrid-toolbar">
-					<a id="save" icon="icon-save" href="#" class="easyui-linkbutton" plain="true">保存</a>
+					<a id="save" icon="icon-save" href="#" class="easyui-linkbutton" plain="true" onclick="submitDate()">保存</a>
 				</div>
 			</div>
 
 			<div region="center" style="overflow:auto;padding:5px;" border="false">
-				<form>
+				<form id="areaForm" action="../../areaAction_save.action" method="post">
 					<table class="table-edit" width="80%" align="center">
 						<tr class="title">
 							<td colspan="2">区域信息</td>
+                            <td><input type="hidden" name="id"/></td>
 						</tr>
 						<tr>
 							<td>省</td>
