--- a/bos_mangement/bos_mangement_web/src/main/webapp/pages/base/sub_area.html
+++ b/bos_mangement/bos_mangement_web/src/main/webapp/pages/base/sub_area.html
@@ -15,13 +15,24 @@
 		<script type="text/javascript" src="../../js/easyui/ext/jquery.cookie.js"></script>
 		<script src="../../js/easyui/locale/easyui-lang-zh_CN.js" type="text/javascript"></script>
 		<script type="text/javascript" src="../../js/highcharts/highcharts.js"></script>
+		<script type="text/javascript" src="../../js/jquery.ocupload-1.1.2.js"></script>
 		<script type="text/javascript">
 			function doAdd(){
 				$('#addWindow').window("open");
 			}
 			
 			function doEdit(){
-				alert("修改...");
+
+                //获取用户选择的行数,如果不为1,弹出警告,否则弹出修改框
+                var rows = $("#grid").datagrid("getSelections");
+                if (rows.length == 1){
+                    //弹出修改框
+                    $("#addWindow").window("open");
+                    //回填数据
+                    $("#subareaForm").form("load",rows[0]);
+                } else{
+                    $.messager.alert('消息','请选择一行数据进行修改','info');
+                }
 			}
 			
 			function doDelete(){
@@ -34,12 +45,14 @@
 			
 			//导出按钮绑定的事件
 			function doExport(){
-				
+                alert("导出");
 			}
-			
-			function doImport(){
-				alert("导入");
-			}
+
+			// function doImport(){
+            //
+             //
+            //
+			// }
 			
 			//工具栏
 			var toolbar = [ {
@@ -66,7 +79,7 @@
 				id : 'button-import',
 				text : '导入',
 				iconCls : 'icon-redo',
-				handler : doImport
+				// handler : doImport
 			},{
 				id : 'button-export',
 				text : '导出',
@@ -119,17 +132,17 @@
 					return "" ;
 				}
 			}, {
-				field : 'addresskey',
+				field : 'keyWords',
 				title : '关键字',
 				width : 120,
 				align : 'center'
 			}, {
-				field : 'startnum',
+				field : 'startNum',
 				title : '起始号',
 				width : 100,
 				align : 'center'
 			}, {
-				field : 'endnum',
+				field : 'endNum',
 				title : '终止号',
 				width : 100,
 				align : 'center'
@@ -159,12 +172,15 @@
 					pageList: [30,50,100],
 					pagination : true,
 					toolbar : toolbar,
-					url : "../../data/sub_area.json",
+					url : "../../subAreaAction_pageQuery.action",
 					idField : 'id',
 					columns : columns,
 					onDblClickRow : doDblClickRow
 				});
-				
+				$("#button-import").upload({
+                    action: '../../subAreaAction_importXLS.action'
+                });
+
 				// 添加、修改分区
 				$('#addWindow').window({
 			        title: '添加修改分区',
@@ -203,6 +219,13 @@
 			function doDblClickRow(){
 				alert("双击表格数据...");
 			}
+			
+			function submitData() {
+                var result = $("#subareaForm").form("validate");
+                if(result){
+                    $("#subareaForm").submit();
+                }
+            }
 		</script>
 	</head>
 
@@ -214,12 +237,12 @@
 		<div class="easyui-window" title="分区添加修改" id="addWindow" collapsible="false" minimizable="false" maximizable="false" style="top:20px;left:200px">
 			<div style="height:31px;overflow:hidden;" split="false" border="false">
 				<div class="datagrid-toolbar">
-					<a id="save" icon="icon-save" href="#" class="easyui-linkbutton" plain="true">保存</a>
+					<a id="save" icon="icon-save" href="#" class="easyui-linkbutton" plain="true" onclick="submitData()">保存</a>
 				</div>
 			</div>
 
 			<div style="overflow:auto;padding:5px;" border="false">
-				<form id="subareaForm" method="post" action="../../subareaAction_save.action">
+				<form id="subareaForm" method="post" action="../../subAreaAction_save.action">
 					<table class="table-edit" width="80%" align="center">
 						<tr class="title">
 							<td colspan="2">分区信息</td>
@@ -228,8 +251,8 @@
 							<td>选择区域</td>
 							<td>
 								<input class="easyui-combobox" name="area.id"
-									 data-options="valueField:'id',textField:'name',
-									 url:''" />
+									 data-options="valueField:'id',textField:'name',mode:'remote',
+									 url:'../../areaAction_findAll.action'" />
 							</td>
 						</tr>
 						<tr>
