--- a/bos_mangement/bos_mangement_web/src/main/webapp/pages/base/fixed_area.html
+++ b/bos_mangement/bos_mangement_web/src/main/webapp/pages/base/fixed_area.html
@@ -74,7 +74,8 @@
 		}
 
 	}
-	//左右移动
+
+	//快递员左右移动
 	function moveCustomer2Right(){
 		$("#associationSelect").append(
 		    $("#noassociationSelect option:selected")
@@ -87,12 +88,80 @@
 		)
     }
 
-	function associateCustomer2FixedArea() {
-		var rows = $("#grid").datagrid("getSelections");
-		$("#customerFixedAreaId").val(rows[0].id);
-		$("#associationSelect option").prop("selected","selected");
-		$("#customerForm").submit();
+    function associateCustomer2FixedArea() {
+        var rows = $("#grid").datagrid("getSelections");
+        $("#customerFixedAreaId").val(rows[0].id);
+        $("#associationSelect option").prop("selected","selected");
+        $("#customerForm").submit();
     }
+
+    //分区左右移动
+    function moveSubArea2Right(){
+        $("#fixedAreaAssociationSelect").append(
+            $("#noFixedAreaAssociationSelect option:selected")
+        )
+    }
+
+    function moveSubArea2Left() {
+        $("#noFixedAreaAssociationSelect").append(
+            $("#fixedAreaAssociationSelect option:selected")
+        )
+    }
+
+	function associateSubArea2FixedArea() {
+		var rows = $("#grid").datagrid("getSelections");
+		$("#subAreaFixedAreaId").val(rows[0].id);
+		$("#fixedAreaAssociationSelect option").prop("selected","selected");
+		$("#subAreaForm").submit();
+    }
+
+    //关联分区
+    function doAssociationsSubArea(){
+        /*// 判断是否已经选中了一个定区，弹出关联快递员窗口
+        var rows = $("#grid").datagrid('getSelections');
+        if (rows.length == 1) {
+            // 只选择了一个定区
+            // 弹出定区关联快递员 窗口
+            $("#subAreaWindow").window('open');
+        } else {
+            // 没有选中定区，或者选择 了多个定区
+            $.messager.alert("警告", "关联分区,只能（必须）选择一个定区", "warning");
+        }*/
+
+        var rows = $("#grid").datagrid("getSelections");
+        if (rows.length == 1){
+            $('#subAreaWindow').window('open');
+            $("#fixedAreaAssociationSelect").html("");
+            $("#noFixedAreaAssociationSelect").empty();
+
+            $.post("../../fixedAreaAction_findSubAreaUnAssociated.action",
+                function (data) {
+                    for (var i = 0 ; i <data.length; i++){
+                        var id = data[i].id;
+                        var name = data[i].name;
+
+                        $("#noFixedAreaAssociationSelect").append(
+                            '<option value="'+id+'">'+name+'</option>'
+                        );
+                    }
+                });
+            var id = rows[0].id;
+            $.post("../../fixedAreaAction_findSubAreaAssociated.action","id="+id,
+                function (data) {
+                    for (var i = 0 ; i <data.length; i++){
+                        var id = data[i].id;
+                        var name = data[i].name;
+                        $("#fixedAreaAssociationSelect").append(
+                            '<option value="'+id+'">'+name+'</option>'
+                        );
+                    }
+                });
+        }else {
+            $.messager.alert("提示","您必须只能选择一条数据进行关联操作","warning");
+        }
+
+    }
+
 
 	//工具栏
 	var toolbar = [ {
@@ -140,7 +209,7 @@
 		id : 'button-association2',
 		text : '关联分区',
 		iconCls : 'icon-sum',
-		handler : doAssociationsCustomer
+		handler : doAssociationsSubArea
 	} ];
 	// 定义列
 	var columns = [ [ {
@@ -505,6 +574,76 @@
 						<td colspan="3"><a id="associationCourierBtn" href="#" onclick="submitData()"
 							class="easyui-linkbutton" data-options="iconCls:'icon-save'">关联快递员</a>
 						</td>
+					</tr>
+				</table>
+			</form>
+		</div>
+	</div>
+<!--	 关联分区 方式一
+	<div class="easyui-window" title="关联分区窗口" id="subAreaWindow"
+		 modal="true" collapsible="false" closed="true" minimizable="false"
+		 maximizable="false"
+		 style="top: 20px; left: 200px; width: 700px; height: 300px;">
+		<div style="overflow: auto; padding: 5px;" border="false">
+			<form id="subAreaForm"
+				  action="../../fixedAreaAction_associationFixedAreaToSubArea.action"
+				  method="post">
+				<table class="table-edit" width="80%" align="center">
+					<tr class="title">
+						<td colspan="2">关联分区</td>
+					</tr>
+					<tr>
+						<td>选择分区</td>
+						<td>
+							&lt;!&ndash; 存放定区编号 &ndash;&gt;
+							<input type="hidden" name="id" id="subAreaFixedAreaId" />
+							<input data-options="ditable:false, url:'../../subAreaAction_findAll.action',valueField:'id',textField:'name'"
+								   type="text" name="subAreaId" class="easyui-combobox" required="true" />
+
+						</td>
+					</tr>
+					<tr>
+						<td colspan="3"><a id="associationSubAreaBtn" href="#" onclick="submitSubAreaData()"
+										   class="easyui-linkbutton" data-options="iconCls:'icon-save'">关联分区</a>
+						</td>
+					</tr>
+				</table>
+			</form>
+		</div>
+	</div>-->
+
+	<!-- 关联分区窗口 方式二 -->
+	<div modal="true" class="easyui-window" title="关联分区窗口"
+		 id="subAreaWindow" collapsible="false" closed="true"
+		 minimizable="false" maximizable="false"
+		 style="top: 20px; left: 200px; width: 400px; height: 300px;">
+		<div style="overflow: auto; padding: 5px;" border="false">
+			<form id="subAreaForm"
+				  action="../../fixedAreaAction_associationFixedAreaToSubArea.action"
+				  method="post">
+				<table class="table-edit" width="80%" align="center">
+					<tr class="title">
+						<td colspan="3">关联分区</td>
+					</tr>
+					<tr>
+						<td><input type="hidden" name="id" id="subAreaFixedAreaId" />
+							<!-- size: 指定一次可以显示多少条数据  -->
+							<!-- multiple: 可以选择多条数据-->
+							<select id="noFixedAreaAssociationSelect" multiple="multiple" size="10">
+
+							</select></td>
+						<td><input type="button" value="》》" id="moveToRight"
+								   onclick="moveSubArea2Right()"> <br /> <input
+								type="button" value="《《" id="moveToLeft"
+								onclick="moveSubArea2Left()"></td>
+						<td>
+							<select id="fixedAreaAssociationSelect" name="subAreaIds" multiple="multiple" size="10"></select>
+						</td>
+					</tr>
+					<tr>
+						<td colspan="3"><a id="associationSubAreaBtn" href="#"
+										   onclick="associateSubArea2FixedArea()" class="easyui-linkbutton"
+										   data-options="iconCls:'icon-save'">关联客户</a></td>
 					</tr>
 				</table>
 			</form>
