--- a/bos_mangement/bos_mangement_web/src/main/webapp/pages/base/fixed_area.html
+++ b/bos_mangement/bos_mangement_web/src/main/webapp/pages/base/fixed_area.html
@@ -117,16 +117,6 @@
 
     //关联分区
     function doAssociationsSubArea(){
-        /*// 判断是否已经选中了一个定区，弹出关联快递员窗口
-        var rows = $("#grid").datagrid('getSelections');
-        if (rows.length == 1) {
-            // 只选择了一个定区
-            // 弹出定区关联快递员 窗口
-            $("#subAreaWindow").window('open');
-        } else {
-            // 没有选中定区，或者选择 了多个定区
-            $.messager.alert("警告", "关联分区,只能（必须）选择一个定区", "warning");
-        }*/
 
         var rows = $("#grid").datagrid("getSelections");
         if (rows.length == 1){
@@ -579,40 +569,8 @@
 			</form>
 		</div>
 	</div>
-<!--	 关联分区 方式一
-	<div class="easyui-window" title="关联分区窗口" id="subAreaWindow"
-		 modal="true" collapsible="false" closed="true" minimizable="false"
-		 maximizable="false"
-		 style="top: 20px; left: 200px; width: 700px; height: 300px;">
-		<div style="overflow: auto; padding: 5px;" border="false">
-			<form id="subAreaForm"
-				  action="../../fixedAreaAction_associationFixedAreaToSubArea.action"
-				  method="post">
-				<table class="table-edit" width="80%" align="center">
-					<tr class="title">
-						<td colspan="2">关联分区</td>
-					</tr>
-					<tr>
-						<td>选择分区</td>
-						<td>
-							&lt;!&ndash; 存放定区编号 &ndash;&gt;
-							<input type="hidden" name="id" id="subAreaFixedAreaId" />
-							<input data-options="ditable:false, url:'../../subAreaAction_findAll.action',valueField:'id',textField:'name'"
-								   type="text" name="subAreaId" class="easyui-combobox" required="true" />
 
-						</td>
-					</tr>
-					<tr>
-						<td colspan="3"><a id="associationSubAreaBtn" href="#" onclick="submitSubAreaData()"
-										   class="easyui-linkbutton" data-options="iconCls:'icon-save'">关联分区</a>
-						</td>
-					</tr>
-				</table>
-			</form>
-		</div>
-	</div>-->
-
-	<!-- 关联分区窗口 方式二 -->
+	<!-- 关联分区窗口 -->
 	<div modal="true" class="easyui-window" title="关联分区窗口"
 		 id="subAreaWindow" collapsible="false" closed="true"
 		 minimizable="false" maximizable="false"
