完成区域导出excel表格和定时发送工单邮件功能

--- a/bos_mangement/bos_mangement_web/src/main/webapp/pages/base/area.html
+++ b/bos_mangement/bos_mangement_web/src/main/webapp/pages/base/area.html
@@ -36,6 +36,11 @@
 			function doDelete(){
 				alert("删除...");
 			}
+
+            //导出按钮绑定的事件
+            function doExport(){
+                window.location.href = "../../areaAction_exportExcel.action";
+            }
 			
 			//工具栏
 			var toolbar = [ {
@@ -57,7 +62,12 @@
 				id : 'button-import',
 				text : '导入',
 				iconCls : 'icon-redo',
-			}];
+			},{
+                id : 'button-export',
+                text : '导出',
+                iconCls : 'icon-undo',
+                handler : doExport
+            }];
 			// 定义列
 			var columns = [ [ {
 				field : 'id',
