--- a/bos_mangement/bos_mangement_web/src/main/webapp/pages/base/sub_area.html
+++ b/bos_mangement/bos_mangement_web/src/main/webapp/pages/base/sub_area.html
@@ -45,7 +45,7 @@
 			
 			//导出按钮绑定的事件
 			function doExport(){
-                alert("导出");
+                window.location.href = "../../subAreaAction_exportExcel.action";
 			}
 
 			// function doImport(){
